objects/AIA_Group_Structure_Request_Form__c.object
<CustomObject>
    <fields>
        <fullName>ADR_Drawloop__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Opportunity__r.ADR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ADR Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AE_Drawloop__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Opportunity__r.Lead_Rep_Name_User__r.FirstName +''+ Implementation__r.Benefit_Request_Form__r.Opportunity__r.Lead_Rep_Name_User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AE Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AIA_Approval_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US:750 
To check the record is submitted for approval.</description>
        <label>AIA Approval Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Name_Drawloop__c</fullName>
        <formula>TEXT( Implementation__r.Opportunity__r.Service_Rep__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Name Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARC_Approval_Date_Drawloop__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.ARC_Approval_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ARC Approval Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accomodation__c</fullName>
        <formula>TEXT(Implementation__r.Benefit_Request_Form__r.Accommodation__c)</formula>
        <label>Accommodation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Alias__c</fullName>
        <formula>MID(if(LEN(Implementation__r.Account__r.Account_Alias_1__c)&gt;0, Implementation__r.Account__r.Account_Alias_1__c&amp; ", " , "" ) &amp;
if(LEN(Implementation__r.Account__r.Account_Alias_2__c)&gt;0, Implementation__r.Account__r.Account_Alias_2__c&amp; ", " , "" )&amp;
if(LEN(Implementation__r.Account__r.Account_Alias_3__c)&gt;0, Implementation__r.Account__r.Account_Alias_3__c&amp; ", " , "" ),
 0, LEN(if(LEN(Implementation__r.Account__r.Account_Alias_1__c)&gt;0, Implementation__r.Account__r.Account_Alias_1__c&amp; ", " , "" ) &amp;
if(LEN(Implementation__r.Account__r.Account_Alias_2__c)&gt;0, Implementation__r.Account__r.Account_Alias_2__c&amp; ", " , "" )&amp;
if(LEN(Implementation__r.Account__r.Account_Alias_3__c)&gt;0, Implementation__r.Account__r.Account_Alias_3__c&amp; ", " , "" ))-2)</formula>
        <label>Account Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>Implementation__r.Account__r.Account_Legal_Name__c</formula>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Implementation__r.Opportunity__r.AM_Name__c</formula>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Requesting_SearchLight_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Requesting SearchLight Reports?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Any additional comments that may be helpful in completing the group structure</inlineHelpText>
        <label>Additional Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alpha_Prefix_is_missing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US 63 - shows if the Alpha Prefix is missing in relaed Groups</description>
        <label>Alpha Prefixes Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Networks_Requested__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Alternate_Networks_Requested__c</formula>
        <label>Alternate Networks Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attachment_With_Supporting_Detail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment With Supporting Detail?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCBS_Plan__c</fullName>
        <description>Required if "Alternate Networks Requested?" = "Yes" and Request is either New, Off-Cycle or Renewal</description>
        <encryptionScheme>None</encryptionScheme>
        <label>BCBS Plan</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRF_Funding_Arrangement__c</fullName>
        <formula>Text(Implementation__r.Benefit_Request_Form__r.Funding_Arrangements__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Funding Arrangement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_Religious_Exemption__c</fullName>
        <formula>(Implementation__r.Benefit_Request_Form__r.Exemption__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Religious Exemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BRF_Request_Type__c</fullName>
        <formula>Text(Implementation__r.Benefit_Request_Form__r.Request_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Group_Impact_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Base Group Impact Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Base_Group_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does Group Structure have new group impacts?</inlineHelpText>
        <label>Base Group Impact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Implementation__r.Account__r.BillingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Count__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Contract_Count__c</formula>
        <label>Contract Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Control_Plan__c</fullName>
        <formula>IF( ISPICKVAL( Implementation__r.Benefit_Request_Form__r.Control_Plan__c ,"580"),"DC-580",If ( ispickval( Implementation__r.Benefit_Request_Form__r.Control_Plan__c ,"690"),"MD-690",NULL))</formula>
        <label>Control Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_of_Plans__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dental # of Plans</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is a further breakdown needed at the Department Level. If yes indicate the need</inlineHelpText>
        <label>Department Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Department_Number_Notes__c</fullName>
        <description>US 238,239</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Account Claims &amp; Billing Requirements</inlineHelpText>
        <label>Department Number Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Diversified_Benefits__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US 810,As a Sales user, I want to have the Group Structure Request Form adjusted, so that the system can capture the information required on the Group Structure Request Form more accurately.</description>
        <inlineHelpText>Only Sales can update Diversified Benefits</inlineHelpText>
        <label>Diversified Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug_of_Plans__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Drug # of Plans</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EGWP__c</fullName>
        <formula>if(text(Implementation__r.Benefit_Request_Form__r.EGWP_Picklist__c) == 'Yes', True, False)</formula>
        <label>EGWP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ERISA_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ERISA Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Benefit_Effective_Date__c</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_date_format__c</fullName>
        <formula>LPAD(TEXT(MONTH(Effective_Date__c)), 2, '0')+"/" +LPAD(TEXT(DAY(Effective_Date__c)), 2, '0')+"/" 
+ MID(TEXT(YEAR(Effective_Date__c)), 3, 4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective date format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Option_Other__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Other_Enrollment_Option__c</formula>
        <inlineHelpText>Required if "Other" is selected for "Enrollment Option"</inlineHelpText>
        <label>Enrollment Option - Other</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Option__c</fullName>
        <formula>TEXT(Implementation__r.Benefit_Request_Form__r.Enrollment_Option__c)</formula>
        <label>Enrollment Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Type__c</fullName>
        <formula>TEXT(Implementation__r.Benefit_Request_Form__r.Enrollment_Type__c)</formula>
        <label>Enrollment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrollment_Vendor__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Enrollment_Vendor__c</formula>
        <inlineHelpText>Required if "eExchange" is selected for "Enrollment Option"</inlineHelpText>
        <label>Enrollment Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FACETs_Classes_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Is a further breakdown needed at the FACETs Classes Level. If yes indicate the need</inlineHelpText>
        <label>FACETs Classes Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FACETs_Subgroup_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Account Billing Requirements</inlineHelpText>
        <label>FACETs Subgroup Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FlexLink__c</fullName>
        <formula>if(text(Implementation__r.Benefit_Request_Form__r.FlexLink_Picklist__c) == 'Yes', True, False)</formula>
        <label>FlexLink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flexlink_Coverage__c</fullName>
        <inlineHelpText>Required if account is Flexlink</inlineHelpText>
        <label>Flexlink Coverage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Covering Dependents of Medicare</fullName>
                </value>
                <value>
                    <fullName>Yes - Covering Medicare Retirees</fullName>
                </value>
                <value>
                    <fullName>No - Covering Dependents of Medicare</fullName>
                </value>
                <value>
                    <fullName>No - Covering Medicare Retirees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Medical_Billing_Request_Breakdow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Account Billing Requirements</inlineHelpText>
        <label>Group/Medical-Billing Request Breakdown</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Numbers_Drawloop__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Numbers Drawloop</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Group_Phone_Number__c</fullName>
        <formula>Implementation__r.Account__r.Phone</formula>
        <label>Group Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Effcetive_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Group Structure Request Forms</relationshipLabel>
        <relationshipName>Group_Structure_Request_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_it_a_National_Account_With_Par_Plans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is it a National Account With Par Plans?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jurisdiction_Drawloop__c</fullName>
        <formula>TEXT(Implementation__r.Benefit_Request_Form__r.Jurisdiction__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jurisdiction Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Participation__c</fullName>
        <inlineHelpText>Required if "Par Plan" is not MD or DC</inlineHelpText>
        <label>Level of Participation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Service</fullName>
                </value>
                <value>
                    <fullName>Partial Service</fullName>
                </value>
                <value>
                    <fullName>Minimum Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_of_Plans__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Medical # of Plans</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MembersEdge_Account_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>MembersEdge Account Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NASCO_Account_Number__c</fullName>
        <formula>Implementation__r.Account__r.NASCO_Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NASCO Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_or_Local__c</fullName>
        <formula>TEXT( Implementation__r.Account__r.National_or_Local__c )</formula>
        <label>National or Local</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_End_Date__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Open_Enrollment_End_Date__c</formula>
        <label>Open Enrollment End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Start_Date__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Open_Enrollment_Start_Date__c</formula>
        <label>Open Enrollment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Effective_Date_Drawloop__c</fullName>
        <formula>Implementation__r.Account__r.NASCO_Original_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Effective Date Drawloop</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PPO_Overlay__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Non-Standard and available to ASO accounts only; Applies only to BC Adv or HB Adv products when they want to pay PPO providers as well as BlueChoice</inlineHelpText>
        <label>PPO Overlay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Par_Plan__c</fullName>
        <inlineHelpText>Plan Code 690 to be used for Alt Net and or FlexLink
Plan Code 580 to be used for Alt Net</inlineHelpText>
        <label>Par Plan</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>580-DC zipcode range&amp;690 for all others</fullName>
                </value>
                <value>
                    <fullName>690-MD zipcode range&amp;580 for all others</fullName>
                </value>
                <value>
                    <fullName>Plan code 580 for DC</fullName>
                </value>
                <value>
                    <fullName>Plan code 690 for MD</fullName>
                </value>
                <value>
                    <fullName>Plan code 700 for MA</fullName>
                </value>
                <value>
                    <fullName>Plan code 710 for MI</fullName>
                </value>
                <value>
                    <fullName>Plan code 780 for NJ</fullName>
                </value>
                <value>
                    <fullName>Plan code 580</fullName>
                </value>
                <value>
                    <fullName>Plan code 690</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Performance_Guarantee__c</fullName>
        <formula>IF(
AND(
NOT(ISBLANK(Implementation__r.Account__r.Performance_Guarantee_Start_Date__c  ) ),
 ISBLANK(Implementation__r.Account__r.Performance_Guarantee_End_Date__c )
)
,true,
IF(AND(
NOT(ISBLANK(Implementation__r.Account__r.Performance_Guarantee_End_Date__c ) ),
  DATEVALUE(CreatedDate) &lt;=Implementation__r.Account__r.Performance_Guarantee_End_Date__c
),true,
IF(AND(
NOT(ISBLANK(Implementation__r.Account__r.Performance_Guarantee_End_Date__c ) ),
  DATEVALUE(CreatedDate) &gt;Implementation__r.Account__r.Performance_Guarantee_End_Date__c
),false,null
) 
) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Performance Guarantee?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processing_Type__c</fullName>
        <label>Processing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reject Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rejected_comments_by_Account__c</fullName>
        <description>US 117 Reject comments under GSRF when rejected by account</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejected Comments By Account</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>IF( Request_Type__c='Prospect/New' , null, Implementation__r.Account__r.Final_Renewal_Date__c)</formula>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <formula>Text(Implementation__r.Business_Type__c)</formula>
        <label>Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Number_Drawloop__c</fullName>
        <formula>"SF-" + Text(Implementation__r.Benefit_Request_Form__r.Revision_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revision Number Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchLight_Reports_Requested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Yes indicate report breakdown.</inlineHelpText>
        <label>SearchLight Reports Requested</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Implementation__r.Account__r.BillingState</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft - New</fullName>
                    <default>true</default>
                    <label>Draft - New</label>
                </value>
                <value>
                    <fullName>Assigned to MAST</fullName>
                </value>
                <value>
                    <fullName>Approved by Internal Team</fullName>
                </value>
                <value>
                    <fullName>Rejected by Internal Team</fullName>
                </value>
                <value>
                    <fullName>Draft - Incomplete</fullName>
                </value>
                <value>
                    <fullName>Approved by Account</fullName>
                </value>
                <value>
                    <fullName>Rejected by Account</fullName>
                </value>
                <value>
                    <fullName>Awaiting Internal Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Implementation__r.Account__r.BillingStreet</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubGroup_Account_Drawloop__c</fullName>
        <formula>Implementation__r.Benefit_Request_Form__r.Sub_Group_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubGroup Account Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_of_Plans__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vision # of Plans</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <formula>Implementation__r.Account__r.BillingPostalCode</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ignore_gsa_validations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To ignore gsm approval response validation from the class</description>
        <label>ignore_gsa_validations</label>
        <type>Checkbox</type>
    </fields>
    <label>Group Structure Request Form</label>
    <nameField>
        <displayFormat>GSRF-{000000}</displayFormat>
        <label>Group Structure Request Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Structure Request Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>AIA_200_GSRF_Record_Type</fullName>
        <active>true</active>
        <label>AIA 200+ GSRF</label>
    </recordTypes>
    <recordTypes>
        <fullName>AIA_RUL_GSRF</fullName>
        <active>true</active>
        <label>AIA RUL GSRF</label>
    </recordTypes>
    <validationRules>
        <fullName>GSRF001_Flexlink_Coverage_Required</fullName>
        <active>true</active>
        <description>Required if "Flexlink?" = "Yes" on the Benefit Request Form</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND(
text(Implementation__r.Benefit_Request_Form__r.FlexLink_Picklist__c) = 'Yes',
ISBLANK(TEXT(Flexlink_Coverage__c))
)</errorConditionFormula>
        <errorMessage>Please enter the Flexlink Coverage as FlexLink is True in Benefit Request Form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF002_BCBS_Plan</fullName>
        <active>true</active>
        <description>Required if "Alternate Networks Requested?" = "Yes" and Request is either New, Off-Cycle or Renewal</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; IF( 
AND( 
(Implementation__r.Benefit_Request_Form__r.Alternate_Networks_Requested__c  = true &amp;&amp; (TEXT(Implementation__r.Benefit_Request_Form__r.Request_Type__c) = "Prospect/New"||TEXT(Implementation__r.Benefit_Request_Form__r.Request_Type__c) = "Renewal"||TEXT(Implementation__r.Benefit_Request_Form__r.Request_Type__c) = "Off-Cycle")), 
LEN( BCBS_Plan__c ) = 0), True, False)</errorConditionFormula>
        <errorDisplayField>BCBS_Plan__c</errorDisplayField>
        <errorMessage>Please enter the BCBS Plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF003_Level_of_Participation</fullName>
        <active>true</active>
        <description>Required if "Par Plan" is not MD or DC</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; IF( AND( 
( INCLUDES(Par_Plan__c,"Plan code 700 for MA")||
INCLUDES(Par_Plan__c ,"Plan code 710 for MI")||
INCLUDES(Par_Plan__c ,"Plan code 780 for NJ") || INCLUDES(Par_Plan__c ,"Plan code 580" )|| 
INCLUDES(Par_Plan__c,"Plan code 690")), 
ISBLANK(TEXT(Level_of_Participation__c))), True, False)</errorConditionFormula>
        <errorDisplayField>Level_of_Participation__c</errorDisplayField>
        <errorMessage>Please enter Level of Participation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF004_SearchLight_Reports_Requested</fullName>
        <active>true</active>
        <description>Required if account is requesting SearchLight reports</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; IF(
AND(
Account_Requesting_SearchLight_Reports__c  = True, 
LEN(SearchLight_Reports_Requested__c ) = 0), True, False)</errorConditionFormula>
        <errorDisplayField>SearchLight_Reports_Requested__c</errorDisplayField>
        <errorMessage>Account Requesting SearchLight Report is Yes, then SearchLight Reports Requested is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF005_Status_to_Mast_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; IF( AND(ISPICKVAL( Status__c , "Assigned to MAST"),Attachment_With_Supporting_Detail__c = False) , true, false)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>GSRF will not allow to move to assign to MAST if check box indicates NO attachments appears.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF006_Processing_Decision</fullName>
        <active>false</active>
        <description>ensure field is populated before GSRF status is Set to "Processing Decision - Complete"</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND( ISBLANK(TEXT(Processing_Type__c)) ,ISPICKVAL( Status__c , 'Process Decision - Complete'))</errorConditionFormula>
        <errorMessage>Group Structure Complexity should not be blank when status is Process Decision - Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF007_Flexlink_Coverage_Not_Required</fullName>
        <active>true</active>
        <description>us 234</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND(
 FlexLink__c  = false,
Not(ISBLANK(TEXT(Flexlink_Coverage__c)))
)</errorConditionFormula>
        <errorDisplayField>Flexlink_Coverage__c</errorDisplayField>
        <errorMessage>If the Account is not FlexLink, then FlexLink Coverage must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF008_BCBS_Plan</fullName>
        <active>true</active>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; AND(Alternate_Networks_Requested__c =false,NOT(ISBLANK(BCBS_Plan__c)))</errorConditionFormula>
        <errorDisplayField>BCBS_Plan__c</errorDisplayField>
        <errorMessage>If there are no Alternate Networks Requested, then BCBS Plan must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF009_SearchLight_Reports_NotRequested</fullName>
        <active>false</active>
        <description>Required if account is requesting SearchLight reports</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; IF(
AND(
Account_Requesting_SearchLight_Reports__c  = False, 
LEN(SearchLight_Reports_Requested__c )!= 0), True, False)</errorConditionFormula>
        <errorDisplayField>Account_Requesting_SearchLight_Reports__c</errorDisplayField>
        <errorMessage>If the Account is not requesting SearchLight Reports, then SearchLight Reports Requested must be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF010_Implementation_Missing</fullName>
        <active>true</active>
        <description>If Implementation is missing on the GSRF</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp;  IF( Implementation__c = null, true, false)</errorConditionFormula>
        <errorDisplayField>Implementation__c</errorDisplayField>
        <errorMessage>Group Structure Request Form must be associated to an Implementation</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GSRF011_Flexlink_Coverage_Required</fullName>
        <active>true</active>
        <description>Owner field readonly</description>
        <errorConditionFormula>Not($Permission.Ignore_Validation_Rules) &amp;&amp; 
ISCHANGED( OwnerId )</errorConditionFormula>
        <errorMessage>GSRF011 Owner field is Readonly.</errorMessage>
    </validationRules>
</CustomObject>